Unify on Map.of/copyOf